test/error/missing_endpackage.sv
// pattern: missing expected `endpackage`
package foo;
